# kitsune-1

clang/include/clang/Basic/: DiagnosticDriverKinds.td
clang/include/clang/Config/: kitsune.h.cmake
clang/include/clang/Driver/: Driver.h  Options.td
clang/kitsune/: CMakeLists.txt
clang/lib/Driver/: Driver.cpp  Tapir.cpp  ToolChain.cpp
clang/lib/Driver/ToolChains/: Flang.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Headers/: kitsune.h.cmake
flang/include/flang/Frontend/: CodeGenOptions.def  CodeGenOptions.h  CompilerInvocation.h  LangOptions.h
flang/include/flang/Optimizer/CodeGen/: CGPasses.td
flang/include/flang/Optimizer/Dialect/: FIRAttr.td  FIROps.h  FIROps.td
flang/include/flang/Optimizer/Dialect/Support/: FIRContext.h
flang/include/flang/Optimizer/Transforms/: Passes.h  Passes.td
flang/include/flang/Tools/: CLOptions.inc  CrossToolHelpers.h
flang/lib/Frontend/: CompilerInvocation.cpp  FrontendActions.cpp
flang/lib/Lower/: Bridge.cpp  ConvertExpr.cpp
flang/lib/Optimizer/Builder/: DoLoopHelper.cpp
flang/lib/Optimizer/CodeGen/: CodeGen.cpp  Target.cpp  TargetRewrite.cpp  TypeConverter.cpp
flang/lib/Optimizer/Dialect/: FIROps.cpp
flang/lib/Optimizer/Dialect/Support/: FIRContext.cpp
flang/lib/Optimizer/Transforms/: AlgebraicSimplification.cpp  AnnotateConstant.cpp  CMakeLists.txt  ControlFlowConverter.cpp  LoopVersioning.cpp  PassDetail.h  RewriteLoop.cpp
flang/test/Fir/: loopconcurrent01.fir
flang/test/Kitsune/: tapirtarget.f90  tapirtarget.fir  tapirtargetIR.f90
flang/tools/bbc/: bbc.cpp
flang/tools/tco/: tco.cpp
kitsune/: CMakeLists.txt
kitsune-tests/experiments/kokkos/: .gitignore
kitsune-tests/experiments/kokkos/raytracer/: .gitignore  Makefile  ncu-cmd.txt  raytrace-kitsune.cpp  raytrace-kokkos.cpp
kitsune-tests/raytrace/: compile_time.bc  kitsune.nvp  kokkos.nvp  raytrace.cpp  raytrace2.cpp  run.sh
kitsune/cmake/caches/: kitsune-dev.cmake  kitsune-user.cmake
kitsune/examples/kokkos/: normalize.cpp  raytrace.cpp
kitsune/experiments/: .gitignore  CMakeLists.txt  init-env.sh.cmake
kitsune/experiments/memaccess_attr/: main.cpp
kitsune/experiments/raytracer/: .gitignore  Makefile  benchmark.sh  compile_time.bc  kitsune-raytrace.1.ncu-rep  kokkos-raytrace.1.ncu-rep  ncu-kitsune.sh  ncu-kokkos.sh  profile.sh  raytrace-clang.1.64.ncu-rep  raytrace-cuda.cu  raytrace-forall.cpp  raytrace-kitsune.1.256.ncu-rep  raytrace-kitsune.1.64.ncu-rep  raytrace-kitsune.2.256.ncu-rep  raytrace-kitsune.cpp  raytrace-kokkos.1.64.ncu-rep  raytrace-kokkos.cpp  run.sh  runtime.bc
kitsune/experiments/raytracer/prof-reports/: raytrace-clang.1.256.ncu-rep  raytrace-clang.2.64.ncu-rep  raytrace-cuda.1.64.ncu-rep  raytrace-cuda.2.64.ncu-rep  raytrace-kitsune.2.64.ncu-rep  raytrace-kokkos.1.256.ncu-rep  raytrace-kokkos.2.64.ncu-rep
kitsune/runtimes/GPU/: llvm-cuda.cc
kitsune/runtimes/llvm-gpu/: CMakeLists.txt  llvm-cuda.cpp  llvm-cuda.h  llvm-gpu.cpp
kitsune/runtimes/realm/: CMakeLists.txt
kitsune/test/: ftapir.cpp  ftapir.f90  lit.cfg.py
llvm/include/llvm/Transforms/Tapir/: TapirTargetIDs.h
llvm/lib/Analysis/: TargetLibraryInfo.cpp
llvm/lib/Transforms/Tapir/: GPUABI.cpp  LoweringUtils.cpp
mlir/include/mlir/: InitAllDialects.h
mlir/include/mlir/Dialect/ControlFlow/IR/: ControlFlowOps.td
mlir/include/mlir/Dialect/LLVMIR/: CMakeLists.txt  LLVMAttrDefs.td  LLVMOps.td  LLVMTapir.td  LLVMTapirDialect.h
mlir/include/mlir/IR/: BuiltinOps.td
mlir/lib/Conversion/LLVMCommon/: ConversionTarget.cpp
mlir/lib/Dialect/LLVMIR/: CMakeLists.txt
mlir/lib/Dialect/LLVMIR/IR/: LLVMInlining.cpp  LLVMTapirDialect.cpp
mlir/test/Dialect/LLVMIR/: llvm-tapir-ops.mlir
mlir/test/mlir-opt/: commandline.mlir
